--- a/index.html
+++ b/index.html
@@ -13,16 +13,6 @@
   <kink rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
   <link rel="stylesheet" href="css/styles.css">
 
-  <style>
-    .card-header {
-      background-color: #FFBE00;
-      color: floralwhite;
-    }
-
-    .radio-inline {
-      margin-left: 10px;
-    }
-  </style>
 
   <title>Ristorante Con Fusion</title>
 
@@ -43,7 +33,7 @@
           <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
         </ul>
         <span class="navbar-text">
-          <a data-toggle="modal" data-target="#loginModal">
+          <a id="loginModalButton">
             <span class="fa fa-sign-in"></span> Login</a>
         </span>
       </div>
@@ -158,7 +148,8 @@
                   <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                  <a class="btn btn-block nav-link btn-warning" data-toggle="modal" data-target="#reserveModal"
+                  <!-- <a class="btn btn-block nav-link btn-warning" data-toggle="modal" data-target="#reserveModal" -->
+                  <a class="btn btn-block nav-link btn-warning" id="reserveModalButton"
                     role="button">Reserve Table
                   </a>
                 </div>
@@ -344,8 +335,17 @@
           $('#carouselButton').children('span').addClass('fa-pause')
         }
       });
+
+      $('#reserveModalButton').click(function() {
+          $('#reserveModal').modal('toggle')
+      });
+
+      $('#loginModalButton').click(function() {
+          $('#loginModal').modal('toggle')
+      });
     });
   </script>
+
 </body>
 
 </html>
